--- a/eureka-sever/pom.xml
+++ b/eureka-sever/pom.xml
@@ -41,7 +41,7 @@
 	</dependencyManagement>
 
 	<build>
-	
+		<finalName>eureka-sever</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
