--- a/papy/src/main/resources/application.yml
+++ b/papy/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     url: jdbc:mysql://116.62.154.58:6612/yaya?useSSL=true
     username: lllogin
     password: 123456
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8         
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: true 
