--- a/papy/pom.xml
+++ b/papy/pom.xml
@@ -7,14 +7,14 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>papy</artifactId>
-	<dependencies> 
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>			
+			<artifactId>h2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
@@ -27,7 +27,25 @@
 			<artifactId>javax.persistence</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		<dependency>
 
+			<groupId>org.springframework.cloud</groupId>
+
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+
+		</dependency>
+
+
+
+		<!-- 用于注册中心访问账号认证 -->
+
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-actuator</artifactId>
+
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>papy</finalName>
