--- a/papy/src/main/resources/application.yml
+++ b/papy/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: papy
   profiles:
     active: dev
   datasource:
@@ -12,4 +14,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true 
+    show-sql: true  
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://master:123@localhost:7998/eureka,http://backup:123@localhost:7999/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
