--- a/papy/pom.xml
+++ b/papy/pom.xml
@@ -27,7 +27,13 @@
 			<artifactId>javax.persistence</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
+		<!-- mvn install:install-file -Dfile=E:\gitrepos\sqljdbc42.jar -Dpackaging=jar -DgroupId=com.microsoft.sqlserver -DartifactId=sqljdbc4 -Dversion=6.0 -->
+		<dependency>
+		    <groupId>com.microsoft.sqlserver</groupId>
+		    <artifactId>sqljdbc4</artifactId>
+		    <version>6.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>papy</finalName>
