--- a/eureka-sever/src/main/resources/application.properties
+++ b/eureka-sever/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=eureka-server
 server.port=7070
-#eureka.instance.hostname=localhost
+#eureka.instance.hostname=localhosttest
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
