--- a/eureka_register_service_backup/src/main/resources/application.properties
+++ b/eureka_register_service_backup/src/main/resources/application.properties
@@ -5,7 +5,7 @@ eureka.instance.hostname=backup
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://admin:123@localhost:${server.master}/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:${server.master}/eureka/
 security.basic.enabled=true
 security.user.name=backup
 security.user.password=123
