--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
 
   client:
     service-url:
-      defaultZone: http://admin:123@localhost:7998/eureka,http://localhost:7999/eureka
+      defaultZone: http://localhost:7998/eureka,http://localhost:7999/eureka
 
 
 security:
