--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -9,47 +9,31 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>zuul</artifactId>
-
+	<artifactId>kafka</artifactId>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
-
-			<groupId>org.springframework.cloud</groupId>
-
-			<artifactId>spring-cloud-starter-eureka</artifactId>
-
-		</dependency>
-		<!-- 用于注册中心访问账号认证 -->
-
-		<dependency>
-
-			<groupId>org.springframework.boot</groupId>
-
-			<artifactId>spring-boot-starter-actuator</artifactId>
-
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>1.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zuul</artifactId>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
-
-		<dependency>
-			<groupId>com.marcosbarbero.cloud</groupId>
-			<artifactId>spring-cloud-zuul-ratelimit</artifactId>
-			<version>1.0.7.RELEASE</version>
-		</dependency>
+	 
 	</dependencies>
 	<build>
-		<finalName>zuul</finalName>
+		<finalName>msg</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>	
+	</build>
 </project>
