--- a/papy/pom.xml
+++ b/papy/pom.xml
@@ -55,6 +55,11 @@
 
 
 		</dependency>
+		<dependency>
+			<groupId>com.nextsgo</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>papy</finalName>
