--- a/eureka_register_service_master/pom.xml
+++ b/eureka_register_service_master/pom.xml
@@ -41,7 +41,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>eureka_register</finalName>
+		<finalName>eureka</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
