--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -1,8 +1,7 @@
 server:
-  port: 80
-  
+  port: 80  
 soft:
   comet:
     longPollingUrl: http://116.62.154.58:98/WEBuser/longPolling.ashx
     topic: longPollingData
-    kafkaSender: localhost:1001/send
+    kafkaSender: http://192.168.1.103:1001/Send
