--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,6 +13,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+			<dependency>
+
+			<groupId>org.springframework.cloud</groupId>
+
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>		
