--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nextsgo</groupId>
 	<artifactId>micro-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.9.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> 
+		<!-- lookup parent from repository -->
 	</parent>
 	<dependencyManagement>
 		<dependencies>
@@ -34,7 +34,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -56,13 +56,10 @@
 	<modules>
 		<module>eureka_register_service_master</module>
 		<module>papy</module>
-    	<module>zuul</module>
-    <module>msg</module>
- 
-    <module>web</module>
-    <module>common</module>
- 
-    <module>kafka</module>
- 
-  </modules>
+		<module>zuul</module>
+		<module>msg</module>
+		<module>web</module>
+		<module>common</module>
+		<module>kafka</module>
+	</modules>
 </project>
