--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -1,5 +1,12 @@
 server:
-  port: 80  
+  port: 7880       
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://master:123@192.168.1.103:7998/eureka/,http://backup:123@backupIP:7999/eureka/
+
 soft:
   comet:
     longPollingUrl: http://116.62.154.58:98/WEBuser/longPolling.ashx
