--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -8,30 +8,25 @@
 		<artifactId>micro-service</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
 	<artifactId>zuul</artifactId>
-
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	
+		<!-- eureka clien -->
 		<dependency>
-
 			<groupId>org.springframework.cloud</groupId>
-
 			<artifactId>spring-cloud-starter-eureka</artifactId>
-
 		</dependency>
-		<!-- 用于注册中心访问账号认证 -->
-
+		
+		<!-- actuator是监控系统健康情况的工具 -->
 		<dependency>
-
 			<groupId>org.springframework.boot</groupId>
-
 			<artifactId>spring-boot-starter-actuator</artifactId>
-
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
