--- a/msg/pom.xml
+++ b/msg/pom.xml
@@ -18,8 +18,12 @@
 			<artifactId>spring-kafka</artifactId>
 			<version>1.1.1.RELEASE</version>
 		</dependency>
-
-		 	<dependency>
+		<!-- eureka clien -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
