--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,6 +26,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    <groupId>de.codecentric</groupId>
+    <artifactId>spring-boot-admin-starter-client</artifactId>
+    <version>1.5.6</version>
+  </dependency>
+		<dependency>
 			<groupId>com.nextsgo</groupId>
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
