--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,8 @@ buildNumber.properties
 .mvn/timing.properties
 appCommodity.log
 
-
+eureka_register_service_master/logs/
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/.metadata/
