--- a/msg/src/main/resources/application-dev.properties
+++ b/msg/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://master:123@masterIP:7998/eureka/,http://backup:123@backupIP:7999/eureka/
 eureka.instance.prefer-ip-address=true
-
+management.security.enabled=false
 #============== kafka ===================
 # 指定kafka 代理地址，可以多个
 spring.kafka.bootstrap-servers=kafkaIP:9092
