--- a/eureka_register_service_master/src/main/resources/application-master.yml
+++ b/eureka_register_service_master/src/main/resources/application-master.yml
@@ -1,11 +1,13 @@
+#nohup java -jar eureka.jar --spring.profiles.active=master &
 spring:
-  profiles: master      
-            
+  profiles: master
 server:
   port: 7998
 eureka:
+  environment: wrkenv
   instance:
-    hostname: masterIP
+    hostname: masterhost
+    prefer-ip-address: true
   client:
     registerWithEureka: true
     fetchRegistry: true
@@ -16,5 +18,6 @@ security:
     enabled: true
   user:
     name: master
-    password: 123
+    password: 123      
+
           
