--- a/eureka_register_service_master/src/main/resources/application.yml
+++ b/eureka_register_service_master/src/main/resources/application.yml
@@ -1,3 +1,47 @@
 spring:
   application:
     name: eurekaserver
+---
+#nohup java -jar eureka.jar --spring.profiles.active=master &
+spring:
+  profiles: master
+server:
+  port: 7998
+eureka:
+  environment: wrkenv
+  instance:
+    hostname: masterhost
+    prefer-ip-address: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://backup:123@backupIP:7999/eureka/
+security:
+  basic:
+    enabled: true
+  user:
+    name: master
+    password: 123   
+---
+#nohup java -jar eureka.jar --spring.profiles.active=backup &
+spring:
+  profiles: backup 
+server:
+  port: 7999
+eureka:
+  environment: wrkenv
+  instance:
+    hostname: backuphost
+    prefer-ip-address: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://master:123@masterIP:7998/eureka/
+security:
+  basic:
+    enabled: true
+  user:
+    name: backup
+    password: 123     
