--- a/eureka_register_service_master/src/main/resources/application.yml
+++ b/eureka_register_service_master/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   application:
     name: eurekaserver
+#springbootadmin 
+management:
+  security:
+    enabled: false
+eureka:
+  server:
+    enable-self-preservation: false         
 ---
 #nohup java -jar eureka.jar --spring.profiles.active=master &
 spring:
