--- a/eureka_register_service_master/pom.xml
+++ b/eureka_register_service_master/pom.xml
@@ -9,6 +9,7 @@
 	<artifactId>eureka_register_service_master</artifactId>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
 
