--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -10,10 +10,12 @@
 	</parent>
 
 	<artifactId>kafka</artifactId>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
 	</properties>
+	 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
