--- a/msg/pom.xml
+++ b/msg/pom.xml
@@ -11,6 +11,8 @@
 	<artifactId>msg</artifactId>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>		
 	</properties>
 	<dependencies>
 	 
