--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,25 +14,29 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
-			<dependency>
-
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-
 			<artifactId>spring-cloud-starter-eureka</artifactId>
-
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>		
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>		
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    <groupId>de.codecentric</groupId>
-    <artifactId>spring-boot-admin-starter-client</artifactId>
-    <version>1.5.6</version>
-  </dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>1.5.6</version>
+		</dependency>
 		<dependency>
 			<groupId>com.nextsgo</groupId>
 			<artifactId>common</artifactId>
